# HaskellWebDevPlayground

./: .gitignore  HaskellWebDevPlayground.cabal  README.md  TAGS  UsersApi.cabal  stack.yaml
backend/: HaskellWebDevPlayground.cabal  stack.yaml
backend/app/: Main.hs
backend/src/: Api.hs
backend/src/Api/: HealthzApi.hs  UserApi.hs
backend/src/Model/: User.hs  UserToHtml.hs
db/: createUserTable.sql  createdb.sh
src/: Api.hs  ContentTypes.hs  Lib.hs
src/Model/: Model.hs  UserToJson.hs
