name:                HaskellWebDevPlayground
version:             0.1.0.0
synopsis:            Playground for web dev using Haskell
description:         Please see README.md
homepage:            https://github.com/m-renaud/HaskellWebDevPlayground#README.md
license:             BSD3
license-file:        LICENSE
author:              Matt Renaud
maintainer:          mrenaud92@gmail.com
copyright:           2017 Matt Renaud
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api, Api.HealthzApi, Api.UserApi, ContentTypes, Lib, Model.User, Model.UserToHtml, Model.UserToJson
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-media
                     , lucid
                     , servant-blaze
                     , servant-lucid
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HaskellWebDevPlayground
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellWebDevPlayground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/m-renaud/HaskellWebDevPlayground
